--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag "pins_display" do %>
   <div class="container">
     <% @pins.each do |pin| %>
-      <%= render partial: "shared/pin", locals: {pin: pin} %>
+      <%= render partial: "shared/pin", locals: {pin: pin, lazy_load: true} %>
     <% end %>
   </div>
 <% end %>
