--- a/app/views/shared/_pin.html.erb
+++ b/app/views/shared/_pin.html.erb
@@ -5,7 +5,7 @@
   <%= turbo_frame_tag(frame_tag_id) do %>
     <div class="box">
       <div class="pin-thumbnail">
-        <%= render_pin_thumbnail(pin, 236, 760) %>
+        <%= render_pin_thumbnail(pin, 236, 760, defined?(lazy_load)) %>
       </div>
       <% if user_signed_in? %>
         <%= turbo_frame_tag(dom_id(pin)) do %>
