--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,15 @@
 <%= render partial: "shared/profile", locals: { user: @user } %>
 
-<%= turbo_frame_tag "content", src: user__created_index_path(@user), loading: "lazy" %>
+<div class="text-center big my-4">All Pins Created</div>
+<%= turbo_frame_tag "content" do %>
+  <div class="container">
+    <%= render partial: "shared/pin", collection: @pins, as: :pin, locals: {edit_pin: true, lazy_load: true} %>
+  </div>
+
+  <% if @user == current_user && @pins.size == 0 %>
+    <div class="text-center my-4">
+      <div>You haven't created any pin yet.</div>
+      <div><%= link_to "Create One", new_pin_path, data: {turbo_frame: "_top"} %></div>
+    </div>
+  <% end %>
+<% end %>
